--- a/melhorias/src/main/resources/application.properties
+++ b/melhorias/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Melhorias API
+
+# Configuração do datasource H2 em memória
+spring.datasource.url=jdbc:h2:mem:melhorias
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Ativar console web do H2 (http://localhost:8080/h2-console)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
