--- a/melhorias/src/main/resources/application.yml
+++ b/melhorias/src/main/resources/application.yml
@@ -14,4 +14,7 @@ spring:
       ddl-auto: update
     show-sql: true
   flyway:
-    enabled: true
+    enabled: false # Desabilitado para evitar conflito com ddl-auto em ambiente de dev
+app:
+  jwtSecret: SpringBootSecretKeyForJWTsMustBeLongerThan256Bits
+  jwtExpirationInMs: 86400000
