--- a/melhorias/pom.xml
+++ b/melhorias/pom.xml
@@ -5,27 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.3.0</version> <relativePath/>
 	</parent>
 	<groupId>com.cottonstar</groupId>
 	<artifactId>melhorias</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Melhorias API</name>
 	<description>Cadastro de Melhorias</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
